<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/rate" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:text="@string/play" />

    <SeekBar
        android:id="@+id/seekBarPitch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:max="100"
        android:progress="50" />

    <ImageView
        android:id="@+id/waveForm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBarPitch"
        android:contentDescription="wave form" />

    <Button
        android:id="@+id/go_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/play"
        android:layout_alignLeft="@+id/seekBarPitch"
        android:layout_marginBottom="23dp"
        android:text="@string/go_speed" />

    <Button
        android:id="@+id/plot_wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/go_speed"
        android:layout_alignBottom="@+id/go_speed"
        android:layout_centerHorizontal="true"
        android:text="@string/draw_wave" />

    <Button
        android:id="@+id/go_pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/plot_wave"
        android:layout_alignBottom="@+id/plot_wave"
        android:layout_alignRight="@+id/seekBarPitch"
        android:text="@string/go_pitch" />

</RelativeLayout>
